# unison

./: .gitignore  .hermes-snapshot.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  MACOS_FIX.md  PRD.md  README.md  README_CN.md  ROADMAP.md  fix-L1-orch.yaml  fix-l1-lock.yaml  fix-l2-sigint.yaml  fix-l3-stream.yaml  fix-l4-snapshot.yaml  fix-l5-refactor.yaml  fix-l6-keymask.yaml  fix-l7-dag-thread.yaml  interfaces.py  mode-system.yaml  parallel-system.yaml  phase10-round1-pipeline.yaml  phase10-round2-pipeline.yaml  phase11-pipeline.yaml  phase12-pipeline.yaml  phase14-pipeline.yaml  phase9-pipeline.yaml  pyproject.toml  tech-design.md  v2-fix-pipeline.yaml  v2-review-codex.md  webui-v2-debate.yaml  webui-v2-dev.yaml
.unison/: budget.json  state.json
docs/: MANUAL.md  foreground-execution-macos-validation.md  foreground-execution.md  v1.1-design.md  v1.1-observer-inotify-design.md  v2-4agent-mode-design.md  v2-context-window-design.md  v2-dag-parallel-design.md  v2-multi-reviewer-design.md  v2-parallel-developer-design.md  v2-schema-migrate-design.md  v2-sqlite-channel-design.md
examples/: planner.md
pipelines/: p12b-tiering.yaml
prd/: PRD-mode-system.md  PRD-p12b-tiering.md  PRD-parallel-system.md  PRD-phase10.md  PRD-phase11.md  PRD-phase12.md  PRD-phase14.md  PRD-phase15.md  PRD-phase9.md  PRD-v2-fix.bak.md  PRD-webui-v2.md  PRD.md  README-V2-FIX.md  prd-fix-L1-orch.md  prd-fix2-sigint.md  prd-fix6-keymask.md  tech-design-phase10.md  tech-design-phase11.md  tech-design-phase12.md  tech-design-phase14.md  tech-design-v2-fix.bak.md  tech-design.md
prompts/: architect-phase10.md  audit-reviewer-phase12.md  cost-analyst-phase10.md  critic-phase10.md  dev-a2a-debate-v2.md  dev-a2a-debate.md  dev-phase1-sse.md  dev-phase2-control.md  dev-phase3-split.md  dev-phase4-generator.md  dev-phase5-selfheal.md  dev-phase6-eventbus.md  dev-phase8-flow.md  dev-phase9-init.md  dev-reviewer.md  developer-base.md  developer-phase11.md  developer-phase9.md  developer-v2-fix.md  developer.md  finalizer-phase10.md  fix-developer.md  fix-planner.md  fix-reviewer.md  greenfield.md  migrate-reviewer-phase14.md  moa-analyzer.md  observer.md  p10-full-dev.md  p10-moa-analyzer.md  p10b-dev-fix.md  p8-full-dev-impl.md  p8-full-dev.md  p8-moa-analyzer.md  p8-review.md  p9-full-dev.md  p9-moa-analyzer.md  plan-reviewer-phase9.md  plan-reviewer.md  planner-phase9.md  (+10 more)
reviews/: code-review-claude.md  code-review-codex.md  code-review-merged.md  design-review-round-1.md  design-review-round-2.md  design-review-round-3.md  design-review-round-4.md  design-review-round-5.md  design-review-round-6.md  iter-1.md  iter-10.md  (+23 more)
(+202 files in other folders)
