[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unison-wanwuyixin"
version = "1.0.0"
description = "Unison (万物一心) — Loop Engineering pipeline for multi-agent collaboration"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0", "pytest-timeout>=2.0"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Xuan0629/unison"
Repository = "https://github.com/Xuan0629/unison"
Issues = "https://github.com/Xuan0629/unison/issues"

[project.scripts]
unison = "unison.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"unison.webui" = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
